ProjectType: refactoring & PMD